@@ -13,6 +13,10 @@
 
 === Changes
 
+* Checks can implement the `LongRunning` interface if they intentionally run
+  over long periods of time. This allows them to extend the default timeout
+  based on their own unique configuration.
+
 == v0.5.0
 
 === Features
